# behaviac

./: .gitignore  BUILD.md  CMakeLists.txt  CNAME  LICENSE  README.md  _config.yml  behavaic_docs.sublime-project  history.txt  index.html  license.txt  params.json  rss.xml  search.js  search_support.xml  todos.txt  version.txt
.sass-cache/48928a71ada7e4b3947e8766b16764e30891f2eb/: _gridism.scssc
.sass-cache/93eadfda9a2079d99bbdf5ed56d7ea85081780df/: _font-awesome.scssc  _gridism.scssc  _mixins.scssc  _normalize.scssc  _pygments.scssc  _style.scssc
FAQ/: index.md
_data/: docs.yml
_docs/: history.md  index.md
_docs/articles/: concepts.md  overview.md  updatenotes.md
_docs/en/: index.md
_docs/en/articles/: index.html  index.index  index.md  test.md
_docs/en/references/: index.html  index.md  test.md
_docs/en/tutorials/: index.html  index.md  test.md
_docs/news/: 2015-11-25 test.md
_docs/references/: index.md  test.md
_docs/tutorials/: index.md  test.md
_docs/zh/: index.md
_docs/zh/articles/: concepts.md  index.html  index.md  overview.md  updatenotes.md  what_is_behaviac.md
_docs/zh/references/: index.html  index.md  intro.md  selector.md  sequence.md  test.md
_docs/zh/tutorials/: index.html  index.md  test.md  tutorial1.md  tutorial10.md  tutorial10_performence.md  tutorial11.md  tutorial11_event.md  tutorial12_hotreload.md  tutorial1_install.md  tutorial2.md  tutorial2_usage.md  tutorial3.md  tutorial3_1.md  tutorial3_1_meta_cpp_register.md  tutorial3_2.md  tutorial3_2_meta_cs_register.md  tutorial3_3.md  tutorial3_3_meta_edit.md  tutorial4.md  tutorial4_1.md  tutorial4_1_export_xml_bson.md  tutorial4_2.md  tutorial4_2_export_cpp.md  tutorial4_3.md  tutorial4_3_export_cs.md  tutorial4_4.md  tutorial4_4_generate_node.md  tutorial5.md  tutorial5_extendtypes.md  tutorial6.md  tutorial6_customtypes.md  tutorial7.md  tutorial7_customenum.md  tutorial8.md  tutorial8_customarray.md  tutorial9.md  tutorial9_extendnodes.md
_includes/: analytics.html  docs_contents.html  docs_contents_mobile.html  docs_contents_relatives.html  docs_contents_relatives_list.html  docs_option.html  docs_ul.html  footer.html  header.html  news_contents.html  news_contents_mobile.html  news_item.html  post.json  primary-nav-items.html  section_nav.html  top.html
_includes/blog/: meta.tpl
_includes/downloads/: links.md
_layouts/: default.html  docs.html  docs_relatives.html  docs_relatives_list.html  news_item.html  page.tpl
_posts/: 2012-1-20-what is behaviac.markdown  2012-1-20-what is behaviac.md  2015-11-06-behaviac 3.1.6 release.markdown  2015-11-07-behaviac 3.1.7 release.markdown  2015-11-17-behaviac 3.1.9 release.markdown  2015-11-18-behaviac 3.2.0 release.markdown  2015-11-19-behaviac 3.2.2 release.markdown  2015-11-19-introduction.md  2015-11-20-First-post-in-my-site.markdown  2015-11-20-behaviac 3.2.3 release.markdown  2015-11-20-behaviac 3.2.3 release.md  2015-11-23-concepts.md  2015-11-24-overview.md  2015-11-25-behaviac 3.2.5 release.md  2015-11-25-updatenotes.md  2015-2-30-behaviac 2.0.7 release.markdown  2015-6-20-behaviac 2.1.0 release.markdown  2015-6-26-behaviac 2.1.1 release.markdown  2015-9-30-behaviac 2.1.7 release.markdown  3.2.2.md
_posts/en/: 2015-11-27-hello.md
_posts/fr/: 2015-11-27-hello.md
_posts/tw/: 2015-11-27-hello.md  index.md
_posts/zh/: 2015-11-20-behaviac 3.2.3 release.md  2015-11-20-serverside.md  2015-11-25-behaviac 3.2.5 release.md  2015-11-25-uint64.md  2015-11-26-memory_shared.md  2015-11-27-hello.md  2015-12-10-hotreload.md
_sass/: _style.scss
assets/css/: site.css
blog/: atom.xml  index.html
docs/: behaviac.chm
docs/develop/: contributor.md  criterion.md
docs/intro/: cookie.md  event.md  getting-started.md  index.md  url.md
docs/support/: bug-report.md  faq.md
downloads/: index.html
en/: index.html
en/faq/: index.html  index.md
en/news/: index.html
en/news/releases/: index.html
example/airbattledemo/: README.md  cocos_create.bat
example/airbattledemo/Classes/: GameScene.cpp  GameScene.h  PlaneHero.cpp  PlaneHero.h  enemy.cpp  enemy.h  hero.cpp  hero.h
example/airbattledemo/proj.win32/: airbattledemo.opensdf  airbattledemo.sln  airbattledemo.vcxproj  airbattledemo_exe.sln  main.cpp
example/spaceship/: CMakeLists.txt  main.cpp  readme.txt  spaceship.sln  spaceship.vcproj  spaceship.vcxproj  spaceship2010.vcxproj  spaceship2013.vcxproj  spaceship2013.vcxproj.filters  spaceship_2010.sln  spaceship_2013.sln
example/spaceship/data/: ships.workspace.xml  ships.xml
example/spaceship/framework/: GFrameHandler.cpp  GameLogic.cpp  GameObject.cpp  GameObject.h  Projectile.cpp  Ship.cpp  Ship.h  WorldState.cpp  WorldState.h
help/: index.md
img/: baidu_verify_9Xrl1W7Rmn.html
inc/behaviac/: behaviac.h  test.h
inc/behaviac/agent/: agent.h  agent.inl  checkresult.h  context.h  context.inl  namedevent.h  registermacros.h  state.h  taskmethod.h
js/: lunr.zh.js
src/agent/: agent.cpp  context.cpp  namedevent.cpp  propertynode.cpp  propertynode.h  state.cpp  taskmethod.cpp
src/base/: base.cpp  convertutf.cpp  custommethod.cpp  dynamictype.cpp  dynamictypefactory.cpp  md5.cpp  workspace.cpp
src/behaviortree/: behaviortree.cpp  behaviortree_task.cpp  registernodes.cpp
src/fsm/: alwaystransition.cpp  fsm.cpp  fsmstate.cpp  waitframesstate.cpp  waitstate.cpp  waittransition.cpp
src/htn/: agentproperties.cpp  agentstate.cpp  planner.cpp  plannertask.cpp  task.cpp
src/network/: network.cpp
src/property/: comparator.cpp  method.cpp  properties.cpp  property.cpp
src/world/: world.cpp
test/: generated_behaviors.cpp
test/btperformance/: btperformance.cpp  generated_behaviors.cpp
test/btremotetest/: BTPlayer.cpp  btremotetest.cpp
test/btunittest/: CMakeLists.txt  behaviortest.h  btloadtestsuite.h  main.cpp
test/demo_running/: BTPlayer.cpp  BTPlayer.h  demo_running.cpp
test/usertest/: BTPlayer.cpp  BTPlayer.h  bttest.cpp  usertest.cpp
tools/designer/: BehaviacDesigner.sln
zh/articles/: updatenotes.md
zh/faq/: index.html
zh/help/: index.md
zh/news/: index.html
(+2132 files in other folders)
